--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*.txt export-ignore  
+notes.txt export-ignore  
 README.md export-ignore  
 .gitattributes export-ignore  
 .gitignore export-ignore
+deploy.sh export-ignore
