--- a/config
+++ b/config
@@ -1,1 +1,1 @@
-{"gpio_path": "/usr/local/bin/gpio", "gpio_pin": 11}
+{"gpio_path": "/usr/local/bin/gpio", "gpio_pin": 11, "tts_path": "/var/www/buzzer/pythonws/text_to_speech.sh", "test_mode": False}
